replicas.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-deployment-replicas
spec:
  rules:
    - name: set-replicas-to-3
      match:
        resources:
          kinds:
            - Deployment
      mutate:
        patchStrategicMerge:
          spec:
            replicas: 3
